# BoleUI

./: .clang-format  .gitignore  CMakeLists.txt  example.bui  example.cpp  generate_test_debugger.fish  main.cpp
.zed/: debug.json  tasks.json
include/: stdafx.h  utils.h
test/: TestUitree.cpp  utils.h
testing-grid/: CMakeLists.txt  grid.cpp  grid.h  main.cpp
uilib/: CMakeLists.txt  plot_area.cpp  plot_axis.cpp  plot_util.cpp  rect.cpp  renderer.cpp  uielement.cpp  uitree.cpp
uilib/_test/: TestComponents.cpp  TestLayout.cpp  TestRenderer.cpp  TestUielement.cpp  utils.h
uilib/include/: plot_area.h  plot_axis.h  plot_util.h  rect.h  renderer.h  types.h  uielement.h  uitree.h
